Added test cases

--- a/relayer/env.example
+++ b/relayer/env.example
@@ -1,14 +1,37 @@
 # Ethereum Configuration
 ETH_RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
 ETH_PRIVATE_KEY=your_ethereum_private_key_here
-ETH_FACTORY_ADDRESS=0x... # Deployed EscrowFactory address
-ETH_RESOLVER_ADDRESS=0x... # Deployed FusionResolver address
+MESH_ESCROW_ADDRESS=0x... # Deployed MeshEscrow contract address
+MESH_CROSS_CHAIN_ORDER_ADDRESS=0x... # Deployed MeshCrossChainOrder contract address
+MESH_RESOLVER_NETWORK_ADDRESS=0x... # Deployed MeshResolverNetwork contract address
+MESH_LIMIT_ORDER_PROTOCOL_ADDRESS=0x... # Deployed MeshLimitOrderProtocol contract address
+MESH_DUTCH_AUCTION_ADDRESS=0x... # Deployed MeshDutchAuction contract address
 
 # Sui Configuration
 SUI_RPC_URL=https://fullnode.testnet.sui.io:443
 SUI_PRIVATE_KEY=your_sui_private_key_here
-SUI_FACTORY_ADDRESS=0x... # Deployed Sui factory address
 SUI_PACKAGE_ID=0x... # Deployed Sui package ID
 
 # Relayer Configuration
-POLLING_INTERVAL=10000 # 10 seconds 
+POLLING_INTERVAL=10000 # 10 seconds
+
+# Fusion+ Configuration
+AUCTION_START_DELAY=300
+AUCTION_DURATION=3600
+AUCTION_START_RATE_MULTIPLIER=6.0
+MINIMUM_RETURN_RATE=0.5
+DECREASE_RATE_PER_MINUTE=0.1
+PRICE_CURVE_SEGMENTS=10
+SOURCE_CHAIN_FINALITY=12
+DESTINATION_CHAIN_FINALITY=6
+SECRET_SHARING_DELAY=300
+WHITELISTED_RESOLVERS=0x...,0x...,0x...
+ADMIN_ADDRESSES=0x...,0x...
+PAUSE_GUARDIAN=0x...
+GAS_PRICE_ADJUSTMENT_ENABLED=true
+GAS_VOLATILITY_THRESHOLD=0.2
+GAS_ADJUSTMENT_FACTOR=1.5
+EXECUTION_THRESHOLD_MULTIPLIER=2.0
+REENTRANCY_PROTECTION=true
+EMERGENCY_PAUSE=true
+UPGRADEABILITY=false
