--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "Mesh/contracts/fusionplus-eth/lib/cross-chain-swap"]
 	path = Mesh/contracts/fusionplus-eth/lib/cross-chain-swap
 	url = https://github.com/1inch/cross-chain-swap
+[submodule "evm_contracts/lib/forge-std"]
+	path = evm_contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "evm_contracts/lib/limit-order-protocol"]
+	path = evm_contracts/lib/limit-order-protocol
+	url = https://github.com/1inch/limit-order-protocol
+[submodule "evm_contracts/lib/openzeppelin-contracts"]
+	path = evm_contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
