--- a/evm_contracts/foundry.toml
+++ b/evm_contracts/foundry.toml
@@ -3,29 +3,13 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# Compiler configuration
-solc = '0.8.23'
-optimizer = true
-optimizer_runs = 200
-via_ir = true
-
-# Test configuration
-fuzz_runs = 256
-ffi = true
-
-# Deployment configuration
-[rpc_endpoints]
-sepolia = "${SEPOLIA_RPC_URL}"
-
-[etherscan.sepolia]
-key = "${ETHERSCAN_API_KEY}"
-
+# Remappings for dependencies
 remappings = [
-    '@openzeppelin/=lib/openzeppelin-contracts/',
-    'cross-chain-swap/=lib/cross-chain-swap/contracts/',
-    'limit-order-protocol/=lib/limit-order-protocol/',
-    'solidity-utils/=lib/solidity-utils/',
-    '@1inch/limit-order-protocol-contract/=lib/limit-order-protocol/',
-    '@1inch/solidity-utils/=lib/solidity-utils/',
-    'forge-std/=lib/forge-std/src/'
+    "openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/",
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "openzeppelin-contracts/security/=lib/openzeppelin-contracts/contracts/utils/",
+    "openzeppelin-contracts/access/=lib/openzeppelin-contracts/contracts/access/",
+    "openzeppelin-contracts/token/=lib/openzeppelin-contracts/contracts/token/"
 ]
+
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
